--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "author": "JFabioRM",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.6.2"
+    "chalk": "^5.6.2",
+    "mime-types": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
